syntax = "proto3";

package commonapi;

import "api/v1/commonapi/boolean-operator.proto";
import "api/v1/commonapi/slim-user.proto";
import "google/protobuf/timestamp.proto";

option go_package = "./api/v1/commonapi;commonapi";

// This file has been copied from proto/storage/resource_collection.proto
// It may have diverged from it

message ResourceCollection {
  message EmbeddedResourceCollection {
    string id = 1;
  }

  string id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp last_updated = 5;
  SlimUser created_by = 6;
  SlimUser updated_by = 7;
  // `resource_selectors` resolve as disjunction (OR) with each-other and with selectors from `embedded_collections`. For MVP, the size of resource_selectors will at most be 1 from UX standpoint.
  repeated ResourceSelector resource_selectors = 8;
  repeated EmbeddedResourceCollection embedded_collections = 9;
}

message ResourceSelector {
  // `rules` resolve as a conjunction (AND).
  repeated SelectorRule rules = 1;
}

message SelectorRule {
  // `field_name` can be one of the following:
  // - Cluster
  // - Cluster Label
  // - Namespace
  // - Namespace Label
  // - Namespace Annotation
  // - Deployment
  // - Deployment Label
  // - Deployment Annotation
  string field_name = 1;
  // 'operator' only supports disjunction (OR) currently
  BooleanOperator operator = 2;
  // `values` resolve as a conjunction (AND) or disjunction (OR) depending on operator. For MVP, only OR is supported from UX standpoint.
  repeated RuleValue values = 3;
}

enum MatchType {
  EXACT = 0;
  REGEX = 1;
}

message RuleValue {
  string value = 1;
  MatchType match_type = 2;
}
